kustomize/pgadmin/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pgadmin
  annotations:
    pgadmin.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: pgadmin
  rules:
  - host: dev-pgadmin.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
